--- a/SampleApp.RazorPages/Pages/Index_Get.cshtml
+++ b/SampleApp.RazorPages/Pages/Index_Get.cshtml
@@ -1,6 +1,4 @@
-﻿<p>Here's what a typical use of <code>GetAsync</code> would look like in a Razor page. This snippet uses the <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/SampleApp.Models/Item.cs">Item</a> model class.</p>
-
-<p>The </p>
+﻿<p>Here's what a typical use of <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/Dapper.CX.Base/Abstract/SqlCrudService.cs#L49">GetAsync</a> would look like in a Razor page. This snippet uses the <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/SampleApp.Models/Item.cs">Item</a> model class.</p>
 
 <pre><code class="csharp">
 // identity property passed through route or query string
