--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -67,7 +67,9 @@
             }
             else
             {
+                <main role="main" class="pb-3">
                 @RenderBody()
+                </main>
             }
         </div>
     </div>
