account links, another get example

--- a/SampleApp.RazorPages/Pages/Index.cshtml
+++ b/SampleApp.RazorPages/Pages/Index.cshtml
@@ -15,6 +15,8 @@
     as an injected service. This Razor Pages app demonstrates how to use the injected service along with a suite of
     typical features that Dapper.CX makes easy to implement.</p>
 
+    <p>Please <a href="/Identity/Account/Login" class="btn btn-sm btn-outline-secondary">Login</a> or <a href="/Identity/Account/Register" class="btn btn-sm btn-outline-secondary">Register</a> to see the actual functionality.</p>
+
     <div class="row my-3">
         <div class="col-sm-4">
             <div class="card p-3">
