removed "more" tab

--- a/SampleApp.RazorPages/Pages/Index.cshtml
+++ b/SampleApp.RazorPages/Pages/Index.cshtml
@@ -15,7 +15,7 @@
     as an injected service. This Razor Pages app demonstrates how to use the injected service along with a suite of
     typical features that Dapper.CX makes easy to implement.</p>
 
-    <p>Please <a href="/Identity/Account/Login" class="btn btn-sm btn-outline-secondary">Login</a> or <a href="/Identity/Account/Register" class="btn btn-sm btn-outline-secondary">Register</a> to see the actual functionality.</p>
+    <p>Please <a href="/Identity/Account/Login" class="btn btn-sm btn-outline-secondary">Login</a> or <a href="/Identity/Account/Register" class="btn btn-sm btn-outline-secondary">Register</a> to enable functionality.</p>
 
     <div class="row my-3">
         <div class="col-sm-4">
@@ -115,9 +115,6 @@
         <li class="nav-item" role="presentation">
             <a class="nav-link" id="pills-deleteasync-tab" data-toggle="pill" href="#pills-deleteasync" role="tab" aria-controls="pills-deleteasync" aria-selected="false">DeleteAsync</a>
         </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="pills-more-tab" data-toggle="pill" href="#pills-more" role="tab" aria-controls="pills-more" aria-selected="false">More</a>
-        </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-getasync" role="tabpanel" aria-labelledby="pills-getasync-tab">
@@ -128,10 +125,7 @@
         </div>
         <div class="tab-pane fade" id="pills-deleteasync" role="tabpanel" aria-labelledby="pills-deleteasync-tab">
             <p>delete</p>
-        </div>
-        <div class="tab-pane fade" id="pills-more" role="tabpanel" aria-labelledby="pills-more-tab">
-            <p>more content</p>
-        </div>
+        </div> 
     </div>    
     
 @section Scripts {
