--- a/SampleApp.RazorPages/Pages/Index.cshtml
+++ b/SampleApp.RazorPages/Pages/Index.cshtml
@@ -15,8 +15,11 @@
     as an injected service. This Razor Pages app demonstrates how to use the injected service along with a suite of
     typical features that Dapper.CX makes easy to implement.</p>
 
-    <p>Please <a href="/Identity/Account/Login" class="btn btn-sm btn-outline-secondary">Login</a> or <a href="/Identity/Account/Register" class="btn btn-sm btn-outline-secondary">Register</a> to enable functionality.</p>
-
+    @if (!User.Identity.IsAuthenticated)
+    {
+        <p>Please <a href="/Identity/Account/Login" class="btn btn-sm btn-outline-secondary">Login</a> or <a href="/Identity/Account/Register" class="btn btn-sm btn-outline-secondary">Register</a> to enable functionality.</p>
+    }
+    
     <div class="row my-3">
         <div class="col-sm-4">
             <div class="card p-3">
@@ -46,7 +49,7 @@
 
     <p>The reason for all this is that I don't really like Entity Framework. I feel that EF is not simple or productive enough.
     In my opinion, it doesn't have a &quot;pit of success&quot;. Dapper.CX values code brevity, convention over configuration,
-    and elegant opt-in extendibility where you need it.</p>
+    and elegant <a href="https://github.com/adamfoneil/Dapper.CX/wiki/Extending-Dapper.CX-with-Opt-in-Interfaces">opt-in extendibility</a> where you need it.</p>
 
     <p>This sample app demonstrates both working features along with the code components that make it work, so you can see the result and what
     makes it work side by side.</p>
@@ -124,7 +127,7 @@
             <partial name="Index_Save.cshtml"/>
         </div>
         <div class="tab-pane fade" id="pills-deleteasync" role="tabpanel" aria-labelledby="pills-deleteasync-tab">
-            <p>delete</p>
+            <partial name="Index_Delete.cshtml"/>
         </div> 
     </div>    
     
