--- a/SampleApp.RazorPages/Pages/Index_Save.cshtml
+++ b/SampleApp.RazorPages/Pages/Index_Save.cshtml
@@ -10,7 +10,7 @@
     }
 </code></pre>
 
-<p>You can also use the <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/Dapper.CX.SqlServer.AspNetCore/Extensions/DapperCXExtensions.cs#L15">SaveAndRedirect</a> extension method 
+<p>You can also use the <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/Dapper.CX.SqlServer.AspNetCore/Extensions/DapperCXExtensions.cs#L15">SaveAndRedirectAsync</a> extension method 
     to add exception handling and redirect delegates. This snippet comes from <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/SampleApp.RazorPages/Pages/Items.cshtml.cs#L35-L39">here</a>, and demonstrates how to capture success and error
     messages as well as handle the redirect.</p>
 
