fixed some source links, added some info

--- a/SampleApp.RazorPages/Pages/Index_Delete.cshtml
+++ b/SampleApp.RazorPages/Pages/Index_Delete.cshtml
@@ -10,8 +10,8 @@
     }
 </code></pre>
 
-<p>You can also use the <a href="">DeleteAndRedirectAsync</a> extension method 
-    to add exception handling and redirect delegates. This snippet comes from <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/SampleApp.RazorPages/Pages/Items.cshtml.cs#L35-L39">here</a>, and demonstrates how to capture success and error
+<p>You can also use the <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/Dapper.CX.SqlServer.AspNetCore/Extensions/DapperCXExtensions.cs#L56">DeleteAndRedirectAsync</a> extension method 
+    to add exception handling and redirect delegates. This snippet comes from <a href="https://github.com/adamfoneil/Dapper.CX/blob/master/SampleApp.RazorPages/Pages/Items.cshtml.cs#L42-L43">here</a>, and demonstrates how to capture success and error
     messages as well as handle the redirect.</p>
 
 <pre><code class="csharp">
