--- a/SampleApp.RazorPages/Pages/Items.cshtml
+++ b/SampleApp.RazorPages/Pages/Items.cshtml
@@ -25,6 +25,7 @@
     <p>This little bit of code enables the dropdown at the top of the page to navigate to the item selected in the dropdopwn, while
     preserving the MVC routing format with the Id value separated by a slash. If you use an ordinary <code>form</code> tag, then the Id
     is added using query string syntax, and it doesn't play as well with MVC routing.</p>    
+    <p>There's also a delete button event handler here.</p>
 </div>
 
 <hr/>
